# lambda-executor

./: .pre-commit-config.yaml  CMakeLists.txt
.github/workflows/: ci.yml  docker.yaml
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
lua/miet/http/: client.lua  context.lua
lua/miet/kv/: storage.lua
openapi/: api.yaml
postgresql/data/: scripts.sql
postgresql/schemas/: main-db.sql
src/: main.cpp
src/benchmarks/: execute-lua.cpp
src/benchmarks/data/: sample.json
src/miet/lambda/: exceptions.hpp  execution-context.cpp  execution-context.hpp  executor.hpp  http-client.cpp  http-client.hpp  http.cpp  http.hpp  key-value-storage.cpp  key-value-storage.hpp  scripts-storage.cpp  scripts-storage.hpp  timeout-checker.cpp  timeout-checker.hpp
src/miet/lambda/base/: executor.hpp  http-client.hpp  key-value-storage.hpp  memory-allocator.hpp  script-update-observer.hpp  scripts-fetcher.hpp  timeout-checker.hpp
src/miet/lambda/components/: executor.cpp  executor.hpp  instance-registrator.cpp  instance-registrator.hpp  script-engine.cpp  script-engine.hpp  scripts-fetcher-provider.cpp  scripts-fetcher-provider.hpp  scripts-storage-provider.cpp  scripts-storage-provider.hpp
src/miet/lambda/engine/: fwd.hpp  params.hpp
src/miet/lambda/engine/base/: compiler.hpp  engine.hpp  executor.hpp  script.hpp
src/miet/lambda/engine/lua/: compiler.cpp  compiler.hpp  engine.cpp  engine.hpp  executor.cpp  executor.hpp  script.cpp  script.hpp  utils.cpp  utils.hpp
src/miet/lambda/engine/lua/modules/http/: client.cpp  client.hpp  context.cpp  context.hpp
src/miet/lambda/engine/lua/modules/kv/: storage.cpp  storage.hpp
src/miet/lambda/engine/stub/: compiler.hpp  engine.cpp  engine.hpp  executor.hpp  script.hpp
src/miet/lambda/execution/control/: memory-limit-checker.cpp  memory-limit-checker.hpp  timeout-checker.cpp  timeout-checker.hpp
src/miet/lambda/execution/control/base/: memory-limit-checker.hpp  timeout-checker.hpp
src/miet/lambda/fetchers/: db-fetcher.cpp  db-fetcher.hpp  db-scripts-fetcher.cpp  db-scripts-fetcher.hpp
src/miet/lambda/fetchers/base/: scripts-fetcher.hpp
src/miet/lambda/handlers/: execute-lambda.cpp  execute-lambda.hpp
src/miet/lambda/http/: client.cpp  client.hpp  message.cpp  message.hpp  request.cpp  request.hpp  response.cpp  response.hpp
src/miet/lambda/http/base/: client.hpp
src/miet/lambda/lua/: executor.cpp  executor.hpp  http-client.cpp  http-client.hpp  http-context.cpp  http-context.hpp  memory-allocator.cpp  memory-allocator.hpp  miet-lambda-lib.cpp  storage.cpp  storage.hpp  utils.cpp  utils.hpp
src/miet/lambda/project/: storage.cpp  storage.hpp
src/miet/lambda/project/base/: storage.hpp
src/miet/lambda/testutils/: utils.hpp
src/miet/lambda/testutils/mocks/: http-client.hpp  key-value-storage.hpp  memory-allocator.hpp  memory-limit-checker.hpp  project-storage.hpp  scripts-fetcher.hpp  timeout-checker.hpp
src/ut/: http-request-ut.cpp  http-response-ut.cpp  lua-executor-ut.cpp
tests/: conftest.py  test_execute_lambda.py  test_instance_registrator.py
